update gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-Binaries\
-DerivedDataCache\
-Intermediate\
-Saved\
-Build\
+Binaries
+DerivedDataCache
+Intermediate
+Saved
+Build
 
 .vscode
 .vs
@@ -14,3 +14,5 @@ Build\
 *.suo
 *.xcodeproj
 *.xcworkspace
+/Intermediate
+/Intermediate
